[package]
name = "slide-puzzle"
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "^0.1.7", optional = true }
fnv = "1.0.7"
getrandom = { version = "0.2.15", features = ["js"] }
log = "0.4.22"
rand = "0.8.5"
rustc-hash = "2.0.0"
simple-error = "0.3.1"
wasm-bindgen = "0.2.95"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.72", features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlCollection",
    "HtmlDivElement",
    "Location",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "Window",
] }

[dev-dependencies]
criterion = "0.5.1"
lazy_static = "1.5.0"

[features]
default = ["console_error_panic_hook"]

[[bench]]
name = "optimal_solver_benchmark"
harness = false
